@@ -176,79 +176,7 @@ class TestCase::IO::Socket::INET {
       }
     }
     
-    # blocking
-    {
-      my $host = "127.0.0.1";
-      my $socket = IO::Socket::INET->new({PeerAddr => $host, PeerPort => $port});
-      
-      $socket->set_blocking(0);
-      $socket->set_blocking(1);
-      
-      my $send_buffer = "GET /hello HTTP/1.0\r\nHost: $host\r\n\r\n";
-      $socket->send($send_buffer);
-      
-      $socket->shutdown(SOCKET->SHUT_WR);
-      
-      my $recv_buffer = (mutable string)new_string_len 1000;
-      
-      my $recv_length = $socket->recv($recv_buffer);
-      
-      unless ($recv_length > 0 && $recv_length < 1000) {
-        
-        warn $recv_length;
-        return 0;
-      }
-      
-      Fn->shorten_null_char($recv_buffer);
-      
-      my $content = $recv_buffer;
-      
-      unless (Fn->contains($content, "hello")) {
-        
-        warn dump $content;
-        return 0;
-      }
-    }
-    
     return 1;
   }
   
-  static method set_blocking : int ($port : int) {
-    
-    # blocking
-    {
-      my $host = "127.0.0.1";
-      my $socket = IO::Socket::INET->new({PeerAddr => $host, PeerPort => $port});
-      
-      $socket->set_blocking(0);
-      $socket->set_blocking(1);
-      
-      my $send_buffer = "GET /hello HTTP/1.0\r\nHost: $host\r\n\r\n";
-      $socket->send($send_buffer);
-      
-      $socket->shutdown(SOCKET->SHUT_WR);
-      
-      my $recv_buffer = (mutable string)new_string_len 1000;
-      
-      my $recv_length = $socket->recv($recv_buffer);
-      
-      unless ($recv_length > 0 && $recv_length < 1000) {
-        
-        warn $recv_length;
-        return 0;
-      }
-      
-      Fn->shorten_null_char($recv_buffer);
-      
-      my $content = $recv_buffer;
-      
-      unless (Fn->contains($content, "hello")) {
-        
-        warn dump $content;
-        return 0;
-      }
-    }
-    
-    return 1;
-  }
 }
