@@ -173,51 +173,6 @@ class TestCase::IO::Socket::IP {
       }
     }
     
-    # blocking
-    {
-      my $host = "127.0.0.1";
-      my $socket = IO::Socket::IP->new({PeerAddr => $host, PeerPort => $port});
-      
-      $socket->set_blocking(0);
-      
-      unless ($socket->blocking == 0) {
-        return 0;
-      }
-      
-      $socket->set_blocking(1);
-      
-      unless ($socket->blocking == 1) {
-        return 0;
-      }
-      
-      $socket->set_blocking(0);
-      
-      my $send_buffer = "GET /hello HTTP/1.0\r\nHost: $host\r\n\r\n";
-      $socket->send($send_buffer);
-      
-      $socket->shutdown(SOCKET->SHUT_WR);
-      
-      my $recv_buffer = (mutable string)new_string_len 1000;
-      
-      my $recv_length = $socket->recv($recv_buffer);
-      
-      unless ($recv_length > 0 && $recv_length < 1000) {
-        
-        warn $recv_length;
-        return 0;
-      }
-      
-      Fn->shorten_null_char($recv_buffer);
-      
-      my $content = $recv_buffer;
-      
-      unless (Fn->contains($content, "hello")) {
-        
-        warn dump $content;
-        return 0;
-      }
-    }
-    
     return 1;
   }
   
@@ -318,38 +273,16 @@ class TestCase::IO::Socket::IP {
     return 1;
   }
   
-  static method ipv4_set_blocking : int ($port : int) {
+  static method set_blocking : int ($port : int) {
     
     # blocking
     {
       my $host = "127.0.0.1";
       my $socket = IO::Socket::IP->new({PeerAddr => $host, PeerPort => $port});
       
-      $socket->set_blocking(1);
-      $socket->set_blocking(0);
+      eval { $socket->set_blocking(1); }
       
-      my $send_buffer = "GET /hello HTTP/1.0\r\nHost: $host\r\n\r\n";
-      $socket->send($send_buffer);
-      
-      $socket->shutdown(SOCKET->SHUT_WR);
-      
-      my $recv_buffer = (mutable string)new_string_len 1000;
-      
-      my $recv_length = $socket->recv($recv_buffer);
-      
-      unless ($recv_length > 0 && $recv_length < 1000) {
-        
-        warn $recv_length;
-        return 0;
-      }
-      
-      Fn->shorten_null_char($recv_buffer);
-      
-      my $content = $recv_buffer;
-      
-      unless (Fn->contains($content, "hello")) {
-        
-        warn dump $content;
+      unless ($@) {
         return 0;
       }
     }
