@@ -2,7 +2,9 @@
   [Requirement Changes]
   
     * Require SPVM 0.990021
-  
+  [Incompatibe Changes]
+    * IO::Socket::IP#set_blocking method throw an exception if a true value is given.
+    
 0.224 2023-10-11
   [Bug Fix]
     * Fix a bug that IO::Socket::INET does not call DESTROY method in IO::Socket.
